--- a/LogisticAppProject/app/src/main/res/layout/activity_room_detail.xml
+++ b/LogisticAppProject/app/src/main/res/layout/activity_room_detail.xml
@@ -323,6 +323,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
 
+        android:onClick="RoomNotification"
         android:text="Ver Novedades Salón"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
