--- a/LogisticAppProject/app/src/main/res/layout/activity_room_resume.xml
+++ b/LogisticAppProject/app/src/main/res/layout/activity_room_resume.xml
@@ -321,6 +321,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:onClick="SiteNotificationDetailByRoomActivity"
         android:text="Ver Novedades Salón"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
