--- a/LogisticAppProject/app/src/main/res/layout/activity_password_change.xml
+++ b/LogisticAppProject/app/src/main/res/layout/activity_password_change.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="20dp"
     android:layout_marginTop="20dp"
-    tools:context=".CambioClave">
+    tools:context=".PasswordChangeActivity">
 
     <EditText
         android:id="@+id/tPassword1"
@@ -16,7 +16,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginBottom="16dp"
         android:ems="10"
-        android:hint="Nueva Contraseña"
+        android:hint="Nueva Contraseï¿½a"
         android:inputType="textPassword"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/tPassword2"
@@ -32,7 +32,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="32dp"
         android:ems="10"
-        android:hint="Confirmar Contraseña"
+        android:hint="Confirmar Contraseï¿½a"
         android:inputType="textPassword"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -77,7 +77,7 @@
         android:layout_marginRight="77dp"
         android:layout_marginBottom="32dp"
         android:gravity="center_horizontal"
-        android:text="Asignar Nueva Contraseña"
+        android:text="Asignar Nueva Contraseï¿½a"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tPassword1"
