RF3 Layouts Connection 2
RF3 Layouts Connection 2

--- a/LogisticAppProject/app/src/main/res/layout/activity_distributor.xml
+++ b/LogisticAppProject/app/src/main/res/layout/activity_distributor.xml
@@ -14,7 +14,6 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
         android:drawableLeft="@android:drawable/ic_lock_power_off"
-        android:onClick="Cerrar"
         android:text="Salir"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,7 +29,7 @@
         android:layout_height="56dp"
         android:layout_marginTop="16dp"
         android:drawableLeft="@android:drawable/ic_menu_manage"
-        android:onClick="CambioClave"
+        android:onClick="PasswordChangeActivity"
         android:text="Cambiar Contraseña"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +45,7 @@
 
         android:layout_marginBottom="8dp"
         android:drawableLeft="@android:drawable/ic_menu_directions"
-        android:onClick="Ayuda"
+        android:onClick="HelpActivity"
         android:text="Ayuda"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/bCambiarContrasena"
@@ -63,7 +62,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginBottom="16dp"
         android:drawableLeft="@android:drawable/ic_menu_mapmode"
-        android:onClick="ResgitrarDespacho"
+        android:onClick="DepartureRegisterActivity"
         android:text="Registrar Despacho"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/bConsultarNvedadesSitio"
