--- a/LogisticAppProject/app/src/main/res/layout/activity_site_detail.xml
+++ b/LogisticAppProject/app/src/main/res/layout/activity_site_detail.xml
@@ -344,7 +344,7 @@
         android:layout_marginTop="38dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
-
+        android:onClick="RoomResumen"
         android:text="Ver Resumen Salón"
         app:layout_constraintEnd_toStartOf="@+id/bVerNovedadSitio"
         app:layout_constraintStart_toStartOf="parent"
@@ -357,7 +357,7 @@
         android:layout_marginTop="18dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
-
+        android:onClick="NotificationSite"
         android:text="Ver Novedades Sitio"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tPruebasAnuladasSItios" />
