--- a/LogisticAppProject/app/src/main/res/layout/activity_scan_material.xml
+++ b/LogisticAppProject/app/src/main/res/layout/activity_scan_material.xml
@@ -16,6 +16,7 @@
         android:layout_marginRight="100dp"
         android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toTopOf="@+id/bEscanear"
+		android:onClick="MaterialDetailActivity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
