RF8 Layouts Connection
RF8 Layouts Connection

--- a/LogisticAppProject/app/src/main/res/layout/activity_material_detail.xml
+++ b/LogisticAppProject/app/src/main/res/layout/activity_material_detail.xml
@@ -184,7 +184,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:onClick="Novedad"
+        android:onClick="MaterialDetailActivity"
         android:text="Registrar Novedad"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
