--- a/LogisticAppProject/app/src/main/res/layout/activity_test_scan.xml
+++ b/LogisticAppProject/app/src/main/res/layout/activity_test_scan.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:onClick="DetalleExamen"
+        android:onClick="TestDetailActivity"
         android:text="ESCANEAR CODIGO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
