--- a/LogisticAppProject/app/src/main/res/layout/activity_test_detail.xml
+++ b/LogisticAppProject/app/src/main/res/layout/activity_test_detail.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:onClick="NovedadExamen"
+        android:onClick="NotificationTestActivity"
         android:text="Registrar Novedad"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.485"
