--- a/LogisticAppProject/app/src/main/res/layout/activity_departure_register.xml
+++ b/LogisticAppProject/app/src/main/res/layout/activity_departure_register.xml
@@ -5,149 +5,101 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DepartureRegisterActivity">
+
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/lbl_departure_title"
         style="@style/Widget.AppCompat.TextView.SpinnerItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="173dp"
-        android:layout_marginLeft="173dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="180dp"
-        android:layout_marginRight="180dp"
-        android:layout_marginBottom="45dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:background="#345068"
+        android:freezesText="false"
+        android:gravity="center_horizontal|center_vertical"
+        android:layerType="none"
         android:text="DESPACHOS"
+        android:textColor="#FFFFFF"
+        android:textColorLink="#0F2983"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/dsRegion"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:id="@+id/dsRegion"
-        style="@android:style/Widget.Spinner"
-        android:layout_width="332dp"
+        android:id="@+id/sp_city"
+        style="@android:style/Widget.Holo.Light.DropDownItem"
+        android:layout_width="168dp"
         android:layout_height="42dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/_dynamic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+        app:layout_constraintTop_toBottomOf="@+id/lbl_city_title"
+        app:layout_constraintVertical_bias="0.043" />
 
     <Spinner
-        android:id="@+id/dsDepartamento"
-        style="@android:style/Widget.Spinner"
+        android:id="@+id/sp_department"
+
+        style="@android:style/Widget.Holo.Light.DropDownItem"
         android:layout_width="163dp"
         android:layout_height="41dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="220dp"
-        android:layout_marginRight="220dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="28dp"
+        app:layout_constraintBottom_toTopOf="@+id/_dynamic"
+        app:layout_constraintEnd_toStartOf="@+id/sp_city"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dsRegion" />
-
-    <Spinner
-        android:id="@+id/dsMunicipio"
-        style="@android:style/Widget.Spinner"
-        android:layout_width="168dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="220dp"
-        android:layout_marginLeft="220dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dsRegion" />
+        app:layout_constraintTop_toBottomOf="@+id/lbl_department_title"
+        app:layout_constraintVertical_bias="0.043" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/lbl_department_title"
         style="@android:style/Widget.TextView.PopupMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="24dp"
-        android:text="Región"
-        app:layout_constraintBottom_toTopOf="@+id/dsRegion"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
-
-    <TextView
-        android:id="@+id/textView17"
-        style="@android:style/Widget.TextView.PopupMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="240dp"
-        android:layout_marginRight="240dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="56dp"
         android:text="Departamento"
-        app:layout_constraintBottom_toTopOf="@+id/dsDepartamento"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.16"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dsRegion"
-        app:layout_constraintVertical_bias="0.75" />
+        app:layout_constraintTop_toBottomOf="@+id/lbl_departure_title" />
 
     <TextView
-        android:id="@+id/textView18"
+        android:id="@+id/lbl_city_title"
         style="@android:style/Widget.TextView.PopupMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="220dp"
-        android:layout_marginLeft="220dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="56dp"
         android:text="Municipio"
-        app:layout_constraintBottom_toTopOf="@+id/dsMunicipio"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dsRegion" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        style="@android:style/Widget.Button"
-        android:layout_width="371dp"
-        android:layout_height="206dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:orientation="vertical"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dsDepartamento">
-
-        <ListView
-            android:id="@+id/lListaDespachos"
-            style="@style/Widget.AppCompat.Light.ListView.DropDown"
-            android:layout_width="match_parent"
-            android:layout_height="171dp" />
-    </LinearLayout>
+        app:layout_constraintHorizontal_bias="0.366"
+        app:layout_constraintStart_toEndOf="@+id/lbl_department_title"
+        app:layout_constraintTop_toBottomOf="@+id/lbl_departure_title" />
 
     <Button
-        android:id="@+id/bDespachar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="152dp"
-        android:layout_marginLeft="152dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="152dp"
-        android:layout_marginRight="152dp"
+        android:id="@+id/btn_packoff"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="60dp"
         android:text="DESPACHAR"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/_dynamic"
+        app:layout_constraintVertical_bias="0.322"
+        tools:ignore="UnknownId" />
+
+    <ListView
+        android:id="@+id/lvw_materials"
+        android:layout_width="412dp"
+
+        android:layout_height="351dp"
+        android:layout_marginTop="192dp"
+        app:layout_constraintTop_toBottomOf="@+id/lbl_departure_title"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="-1dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
